08/20/2016 Oleg Moskalenko <mom040267@gmail.com>
Version 4.5.0.4 'dan Eider':
	- OpenSSL 1.1.0 support added.
	- hiredis and mongo compilation configuration fixed
	(fix provided by Harsha Bellur).
	- RPM: Systemd optimization.
	- REST API option fixed.
	- Thread creation error handling fixed.
	- Issue #36 fixed.

11/15/2015 Oleg Moskalenko <mom040267@gmail.com>
Version 4.5.0.3 'dan Eider':
	- SSLv3 support removed. That provides extra security and
	compatibility with OpenSSL distributions or clones
	that do not support SSLv3 (like LibreSSL 2.3.0).
	This fix is required for fresh FreeBSD and for Debian unstable.
	- Compilation and configuration cleaning.
	- Fix for non-interactive shells.
	- RPM: Fixed mongo-c-driver include path (by Sergey Safarov).
	- RPM: Fixed startup daemon as non root user (by Sergey Safarov).
	- RPM: Systemd optimized for high-volume network traffic (by Sergey Safarov).

9/29/2015 Oleg Moskalenko <mom040267@gmail.com>
Version 4.5.0.2 'dan Eider':
	- DTLS segmentation fault fixed;

9/13/2015 Oleg Moskalenko <mom040267@gmail.com>
Version 4.5.0.1 'dan Eider':
	- multiple realms based on oAuth (third-party authorization);
	- STUN attributes conflict resolution;
	- SIGHUP handler fixed;
	- error message logging improved;
	- mongo test db files fixed.
	
7/18/2015 Oleg Moskalenko <mom040267@gmail.com>
Version 4.4.5.4 'Ardee West':
	- moved to github.

6/20/2015 Oleg Moskalenko <mom040267@gmail.com>
Version 4.4.5.3 'Ardee West':
	- third-party authorization STUN attributes adjusted according
		to the values assigned by IANA.
	- SQL injection security hole fixed.
	
5/29/2015 Oleg Moskalenko <mom040267@gmail.com>
Version 4.4.5.2 'Ardee West':
	- dual allocation adjusted according to the new TURN-bis draft;
	- options sha256, sha384, sha512 retired as non-standard;
	- third-party authorization (oAuth) updated according to the
	version 16 of the draft;
	- C++ compilation fixes;
	- cosmetic fixes;
	- fixed binary package for CentOS 7.1;